# newsletter

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: pages.yml
artifacts/: newsletter-2026-W10-draft.json
docs/: index.html  newsletter-2026-W10-draft.html  newsletter-2026-W10-draft.json  newsletter-2026-W10.html  newsletter-2026-W10.json
overrides/: week-2026-W10.yaml  week-example.yaml
src/newsletter/: cli.py
src/newsletter/data_collect/: __init__.py  pipeline.py
templates/: cfc-weekly.html.j2
